--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,16 @@ __pycache__/
 # C extensions
 *.so
 
+# Environments
+.artifacts
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # Distribution / packaging
 .Python
 build/
